    /var/tmp supports extended attributes)
  * debian/rules: clean up stale gpg-agent processes after testing
  * debian/rules: warn if there are leftover daemon processes after testing
  * debian/ostree-tests.lintian-overrides: override a couple of false
    positives
  * Run dh_auto_test with VERBOSE=1, to get logs with older debhelper
  * Build-depend on elfutils, for test-abi.sh

 -- Simon McVittie <smcv@debian.org>  Mon, 28 Mar 2016 12:02:59 +0100

ostree (2016.3-1) experimental; urgency=medium

  * Prepare package for Debian (Closes: #697477)
  * New upstream release
  * Remove -dbg package, rely on automatic dbgsym packages instead
  * Extend package descriptions a bit
  * debian/.gitignore: add
  * debian/copyright: fill in all copyright holders and licenses
  * debian/control: set Maintainer to the pkg-utopia team, with packaging
    in collab-maint git, and myself and Matthias Klumpp as uploaders
  * Normalize packaging via `wrap-and-sort -abst`
  * debian/control: move shared library to Section: libs
  * debian/control: remove redundant Section
  * debian/control: change Section to admin
  * Remove unnecessary uses of dh-exec
  * debian/patches: remove all patches, no longer needed or applied
  * Use dh_install --fail-missing to catch mistakes
  * Add a symbols file
  * Add missing dependency on libglib2.0-dev
  * Add an ostree-tests package, and use it for autopkgtest
  * Enable systemd helpers, but do not start the early-boot systemd services
    on installation
  * Don't override dh_auto_clean to nothing
  * ostree-grub2: recommend concrete GRUB packages instead of hard-depending
    on a transitional package. This is only a Recommends because you
    could be using some other architecture's grub packages.
  * Redirect libexecdir to /usr/lib (not /usr/lib/${multiarch}) since we don't
    need multiarch for anything that's installed there, fixing a broken
    symlink in ostree-grub2
  * Document the limited situations in which ostree-grub2 will work in